fix: board centered on small resolutions

--- a/src/app/components/game/board/boardCell.component.scss
+++ b/src/app/components/game/board/boardCell.component.scss
@@ -4,7 +4,7 @@
     width: 100px;
     height: 100px;
     max-width: 100%;
-    background: #d3d3d36e;
+    background: #d3d3d342;
 }
 
 .cell__token {
