--- a/src/app/components/game/game.route.component.scss
+++ b/src/app/components/game/game.route.component.scss
@@ -8,6 +8,7 @@
     & > div {
         position: relative;
         flex: 1 1 65%;
+        overflow: hidden;
         
         board-smart,
         status-smart {
